--- a/index.html
+++ b/index.html
@@ -6,9 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Academia</title>
+    <link rel="stylesheet" href="index.css">
 </head>
 
 <body>
+    <h2>
+        Academia
+    </h2>
     <h1>
         Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusamus maxime quas ea! Error, praesentium iure?
         Neque aliquid harum et, eligendi, labore iusto assumenda atque quibusdam accusantium sunt vitae, impedit
