--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 </head>
 
 <body>
-    <h2>
-        Academia
+    <h2 id="amarillo">
+        Academia de policias
     </h2>
     <h1>
         Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusamus maxime quas ea! Error, praesentium iure?
